--- a/_posts/2009-07-28-让你上相的10个小窍门.md
+++ b/_posts/2009-07-28-让你上相的10个小窍门.md
@@ -4,6 +4,8 @@ published: true
 title: 让你上相的10个小窍门
 tags: 生活||Life    
 ---
+<img alt="" src="http://media.rd.com/rd/images/rdc/mag0908/advice/put-your-best-foot-forward-slideshow/how-to-look-good-in-photos-af.jpg" border="0" />
+
 1.双眼注视相机镜头略偏上方的位置，脸略向前伸，同时下巴向下倾斜。
 
 2.轻松自然地微笑并不难―只需将舌头收于牙齿之后就OK了（译者注：确切地讲，应当是上牙根之后）。
