--- a/_posts/2009-08-28-让你上相的10个小窍门.md
+++ b/_posts/2009-08-28-让你上相的10个小窍门.md
@@ -2,7 +2,8 @@
 layout: post
 published: true
 title: 让你上相的10个小窍门
-tags: 生活||Life    
+tags: 生活||Life 
+permalink: /2009-08-28-让你上相的10个小窍门.md
 ---
 <img alt="" src="http://media.rd.com/rd/images/rdc/mag0908/advice/put-your-best-foot-forward-slideshow/how-to-look-good-in-photos-af.jpg" border="0" />
 
